Added MarketStatus which allows check for FX market open or closed.  Used to reduce calls for zero return files from Dukascopy.  Updated tests for filtered paths.