@@ -17,6 +17,7 @@
 
 package com.limemojito.trading.model.tick.dukascopy;
 
+import com.limemojito.trading.model.MarketStatus;
 import org.junit.jupiter.api.Test;
 
 import java.time.Instant;
@@ -27,14 +28,14 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 public class DukascopyPathGeneratorTest {
 
-    private final DukascopyPathGenerator generator = new DukascopyPathGenerator();
+    private final DukascopyPathGenerator generator = new DukascopyPathGenerator(new MarketStatus());
 
     @Test
     public void shouldGeneratePathsForDayRange() {
         List<String> paths = generatePathsFor("2018-01-01T00:00:00Z", "2018-01-01T23:59:59Z");
 
         assertThat(paths).hasSize(24);
-        assertThat(paths.get(0)).isEqualTo("EURUSD/2018/00/01/00h_ticks.bi5");
+        assertThat(paths.getFirst()).isEqualTo("EURUSD/2018/00/01/00h_ticks.bi5");
         assertThat(paths.get(23)).isEqualTo("EURUSD/2018/00/01/23h_ticks.bi5");
     }
 
@@ -43,7 +44,7 @@ public class DukascopyPathGeneratorTest {
         List<String> paths = generatePathsFor("2018-01-01T00:00:00Z", "2018-01-02T23:59:59Z");
 
         assertThat(paths).hasSize(2 * 24);
-        assertThat(paths.get(0)).isEqualTo("EURUSD/2018/00/01/00h_ticks.bi5");
+        assertThat(paths.getFirst()).isEqualTo("EURUSD/2018/00/01/00h_ticks.bi5");
         assertThat(paths.get(47)).isEqualTo("EURUSD/2018/00/02/23h_ticks.bi5");
     }
 
@@ -51,19 +52,22 @@ public class DukascopyPathGeneratorTest {
     public void shouldGeneratePathsForYearRange() {
         List<String> paths = generatePathsFor("2018-01-01T00:00:00Z", "2018-12-31T23:59:59Z");
 
-        assertThat(paths).hasSize(365 * 24);
-        assertThat(paths.get(0)).isEqualTo("EURUSD/2018/00/01/00h_ticks.bi5");
-        assertThat(paths.get((365 * 24) - 1)).isEqualTo("EURUSD/2018/11/31/23h_ticks.bi5");
+        // this path count is due to filtering of closed market hours.
+        int expectedPathCount = 7928;
+        assertThat(paths).hasSize(expectedPathCount);
+        assertThat(paths.getFirst()).isEqualTo("EURUSD/2018/00/01/00h_ticks.bi5");
+        assertThat(paths.get(expectedPathCount - 1)).isEqualTo("EURUSD/2018/11/31/23h_ticks.bi5");
     }
 
     @Test
     public void shouldGeneratePathsForMultiYearRange() {
         List<String> paths = generatePathsFor("2018-01-01T00:00:00Z", "2021-12-31T23:59:59Z");
 
-        int numHoursIncludingLeapYear = 35064;
+        // also excludes closed hours.
+        int numHoursIncludingLeapYear = 31734;
         assertThat(paths).hasSize(numHoursIncludingLeapYear);
-        assertThat(paths.get(0)).isEqualTo("EURUSD/2018/00/01/00h_ticks.bi5");
-        assertThat(paths.get(numHoursIncludingLeapYear - 1)).isEqualTo("EURUSD/2021/11/31/23h_ticks.bi5");
+        assertThat(paths.getFirst()).isEqualTo("EURUSD/2018/00/01/00h_ticks.bi5");
+        assertThat(paths.get(numHoursIncludingLeapYear - 1)).isEqualTo("EURUSD/2021/11/31/21h_ticks.bi5");
     }
 
 
@@ -74,9 +78,9 @@ public class DukascopyPathGeneratorTest {
                                                                            Instant.parse("2018-12-31T23:59:59Z"));
         assertThat(pathByDay).hasSize(365);
         for (List<String> paths : pathByDay) {
-            assertThat(paths).hasSize(24);
+            assertThat(paths).hasSizeGreaterThan(1);
         }
-        assertThat(pathByDay.get(0).get(0)).isEqualTo("USDJPY/2018/00/01/00h_ticks.bi5");
+        assertThat(pathByDay.getFirst().getFirst()).isEqualTo("USDJPY/2018/00/01/00h_ticks.bi5");
         assertThat(pathByDay.get(364).get(23)).isEqualTo("USDJPY/2018/11/31/23h_ticks.bi5");
 
     }
@@ -85,14 +89,14 @@ public class DukascopyPathGeneratorTest {
     public void shouldRoundToHourPaths() {
         List<String> paths = generatePathsFor("2018-01-01T00:00:00Z", "2018-01-01T00:00:01Z");
         assertThat(paths).hasSize(1);
-        assertThat(paths.get(0)).isEqualTo("EURUSD/2018/00/01/00h_ticks.bi5");
+        assertThat(paths.getFirst()).isEqualTo("EURUSD/2018/00/01/00h_ticks.bi5");
     }
 
     @Test
     public void shouldRoundToHourPathAcrossDays() {
         List<String> paths = generatePathsFor("2018-01-01T00:00:00Z", "2018-01-02T00:59:59Z");
         assertThat(paths).hasSize(25);
-        assertThat(paths.get(0)).isEqualTo("EURUSD/2018/00/01/00h_ticks.bi5");
+        assertThat(paths.getFirst()).isEqualTo("EURUSD/2018/00/01/00h_ticks.bi5");
         assertThat(paths.get(24)).isEqualTo("EURUSD/2018/00/02/00h_ticks.bi5");
     }
 
